remove todas as interpolações de string

--- a/aula-1/conteudo-teorico.ipynb
+++ b/aula-1/conteudo-teorico.ipynb
@@ -40,7 +40,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "f446b023",
-        "outputId": "39208881-0d36-4149-cbb5-59ae59422962"
+        "outputId": "bd3e19f3-6571-4e3f-a829-2ce691f08c17"
       },
       "source": [
         "# Algoritmo para calcular a soma dos números de 1 a N\n",
@@ -57,13 +57,13 @@
         "# Exemplo de uso:\n",
         "N = 10\n",
         "resultado_soma = soma_ate_n(N)\n",
-        "print(f\"A soma dos números de 1 a {N} é: {resultado_soma}\")\n",
+        "print(\"A soma dos números de 1 a \" + str(N) + \" é: \" + str(resultado_soma))\n",
         "\n",
         "N = 5\n",
         "resultado_soma = soma_ate_n(N)\n",
-        "print(f\"A soma dos números de 1 a {N} é: {resultado_soma}\")"
+        "print(\"A soma dos números de 1 a \" + str(N) + \" é: \" + str(resultado_soma))"
       ],
-      "execution_count": 3,
+      "execution_count": 45,
       "outputs": [
         {
           "output_type": "stream",
@@ -82,7 +82,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "96897e70",
-        "outputId": "ac232ae4-d59e-4cff-ffe1-00b1e5a84f0e"
+        "outputId": "3146b883-09ab-47e4-d8cf-0a54bffc9c87"
       },
       "source": [
         "# Algoritmo para encontrar o maior número em uma lista\n",
@@ -100,15 +100,15 @@
         "# Exemplo de uso:\n",
         "numeros = [12, 45, 6, 78, 34, 99, 23]\n",
         "maior_numero = encontrar_maior_numero(numeros)\n",
-        "print(f\"A lista é: {numeros}\")\n",
-        "print(f\"O maior número na lista é: {maior_numero}\")\n",
+        "print(\"A lista é: \" + str(numeros))\n",
+        "print(\"O maior número na lista é: \" + str(maior_numero))\n",
         "\n",
         "numeros_vazios = []\n",
         "maior_numero = encontrar_maior_numero(numeros_vazios)\n",
-        "print(f\"A lista é: {numeros_vazios}\")\n",
-        "print(f\"O maior número na lista é: {maior_numero}\")"
+        "print(\"A lista é: \" + str(numeros_vazios))\n",
+        "print(\"O maior número na lista é: \" + str(maior_numero))"
       ],
-      "execution_count": 4,
+      "execution_count": 46,
       "outputs": [
         {
           "output_type": "stream",
@@ -285,12 +285,12 @@
       ],
       "metadata": {
         "id": "IuQMVaeVvGsN",
-        "outputId": "944387a1-05d6-4533-daba-501c12956c44",
+        "outputId": "5fe77463-70da-400f-b0c8-84b18cd6cbbd",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": 47,
       "outputs": [
         {
           "output_type": "stream",
@@ -331,21 +331,21 @@
       "cell_type": "code",
       "source": [
         "frutas = [\"maçã\", \"banana\", \"cereja\", \"maçã\"]\n",
-        "print(f\"Lista de frutas: {frutas}\")\n",
-        "print(f\"Primeira fruta: {frutas[0]}\")\n",
+        "print(\"Lista de frutas: \" + str(frutas))\n",
+        "print(\"Primeira fruta: \" + frutas[0])\n",
         "frutas.append(\"laranja\") # Adicionando um elemento\n",
-        "print(f\"Lista após adicionar: {frutas}\")\n",
+        "print(\"Lista após adicionar: \" + str(frutas))\n",
         "frutas[1] = \"uva\" # Modificando um elemento\n",
-        "print(f\"Lista após modificar: {frutas}\")"
+        "print(\"Lista após modificar: \" + str(frutas))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "yoXAbnmYL-2u",
-        "outputId": "eb1f4e6b-724a-4efc-c87c-dc961596092f"
+        "outputId": "bc9cce49-9e6d-4748-d504-c777941fef0b"
       },
-      "execution_count": 6,
+      "execution_count": 48,
       "outputs": [
         {
           "output_type": "stream",
@@ -385,9 +385,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yiwIlg2xMIG8",
-        "outputId": "30d78b88-350b-4e2f-e934-3b473fc3e61c"
+        "outputId": "417c2b82-a6f3-4fad-f4aa-0e70f149b927"
       },
-      "execution_count": 7,
+      "execution_count": 49,
       "outputs": [
         {
           "output_type": "stream",
@@ -420,20 +420,20 @@
         "    \"idade\": 25,\n",
         "    \"cidade\": \"São Paulo\"\n",
         "}\n",
-        "print(f\"Dicionário pessoa: {pessoa}\")\n",
-        "print(f\"Nome da pessoa: {pessoa['nome']}\")\n",
+        "print(\"Dicionário pessoa: \" + str(pessoa))\n",
+        "print(\"Nome da pessoa: \" + pessoa['nome'])\n",
         "pessoa[\"idade\"] = 26 # Modificando um valor\n",
         "pessoa[\"profissão\"] = \"Engenheira\" # Adicionando um novo par chave-valor\n",
-        "print(f\"Dicionário após modificações: {pessoa}\")"
+        "print(\"Dicionário após modificações: \" + str(pessoa))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "7dJlFTElMneZ",
-        "outputId": "e8ea5bb7-385a-409f-c2e5-89663589bd57"
+        "outputId": "c14d1439-90da-40a7-c2d6-a0b88fb5dd95"
       },
-      "execution_count": 8,
+      "execution_count": 50,
       "outputs": [
         {
           "output_type": "stream",
@@ -464,22 +464,21 @@
       "source": [
         "# Exemplo de Conjunto\n",
         "numeros = {1, 2, 3, 2, 1, 4}\n",
-        "print(f\"Conjunto de números: {numeros}\") # Note que os duplicados foram removidos\n",
+        "print(\"Conjunto de números: \" + str(numeros)) # Note que os duplicados foram removidos\n",
         "\n",
         "numeros.add(5) # Adicionando um elemento\n",
-        "print(f\"Conjunto após adicionar: {numeros}\")\n",
+        "print(\"Conjunto após adicionar: \" + str(numeros))\n",
         "numeros.remove(2) # Removendo um elemento\n",
-        "print(f\"Conjunto após remover: {numeros}\")\n",
-        "\n"
+        "print(\"Conjunto após remover: \" + str(numeros))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "5y-YyZqBM3Ic",
-        "outputId": "7f49d317-4242-4274-c4b5-b20af500e12e"
+        "outputId": "3542aa2b-dc54-4437-d2e6-84fcb69baf79"
       },
-      "execution_count": 9,
+      "execution_count": 51,
       "outputs": [
         {
           "output_type": "stream",
@@ -498,17 +497,17 @@
         "# Convertendo uma lista com duplicados para um conjunto para remover duplicados\n",
         "lista_com_duplicados = [10, 20, 30, 20, 10, 40]\n",
         "conjunto_sem_duplicados = set(lista_com_duplicados)\n",
-        "print(f\"Lista original: {lista_com_duplicados}\")\n",
-        "print(f\"Conjunto sem duplicados: {conjunto_sem_duplicados}\")"
+        "print(\"Lista original: \" + str(lista_com_duplicados))\n",
+        "print(\"Conjunto sem duplicados: \" + str(conjunto_sem_duplicados))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "rRBO4ck5M4oV",
-        "outputId": "6cff4baf-23e2-4963-b523-40ff10ad951a"
+        "outputId": "ca741b4e-393b-4f41-e0d1-d6ab0d2a2874"
       },
-      "execution_count": 10,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "stream",
@@ -563,13 +562,13 @@
         "    print(\"Você é um adulto.\")"
       ],
       "metadata": {
-        "id": "7XRr_WhMPE7d",
-        "outputId": "8fa7a897-c6f7-4a7f-c6fb-b91a6f9863e5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "7XRr_WhMPE7d",
+        "outputId": "93937e61-7e70-49d2-a63a-84dcd015a578"
       },
-      "execution_count": 11,
+      "execution_count": 53,
       "outputs": [
         {
           "output_type": "stream",
@@ -610,17 +609,16 @@
         "frutas = [\"maçã\", \"banana\", \"cereja\"]\n",
         "\n",
         "for fruta in frutas:\n",
-        "    print(f\"Eu gosto de {fruta}\")\n",
-        "\n"
+        "    print(\"Eu gosto de \" + str(fruta))"
       ],
       "metadata": {
-        "id": "ncE-dXN-PJMi",
-        "outputId": "55b66993-03a7-49bc-96c0-a0d52ff34f2c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ncE-dXN-PJMi",
+        "outputId": "639ac96e-c88f-4b68-bfa2-d2eae30486d2"
       },
-      "execution_count": 12,
+      "execution_count": 54,
       "outputs": [
         {
           "output_type": "stream",
@@ -638,16 +636,16 @@
       "source": [
         "# Iterando sobre um range de números\n",
         "for i in range(5): # range(5) gera uma sequência de 0 a 4\n",
-        "    print(f\"Contagem: {i}\")"
+        "    print(\"Contagem: \" + str(i))"
       ],
       "metadata": {
-        "id": "zk4DAYxMPKOF",
-        "outputId": "e7ccaf9f-0426-41c4-81f2-230a18cd59bc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "zk4DAYxMPKOF",
+        "outputId": "7c822b5d-79aa-41f6-905f-524b26a1030c"
       },
-      "execution_count": 13,
+      "execution_count": 55,
       "outputs": [
         {
           "output_type": "stream",
@@ -679,17 +677,17 @@
         "contador = 0\n",
         "\n",
         "while contador < 5:\n",
-        "    print(f\"Contador: {contador}\")\n",
+        "    print(\"Contador: \" + str(contador))\n",
         "    contador += 1 # Incrementa o contador para eventualmente parar o loop"
       ],
       "metadata": {
-        "id": "Gql7EIYrPPy5",
-        "outputId": "56627c73-cb0c-4e11-dcac-ac5b2de090d3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Gql7EIYrPPy5",
+        "outputId": "1f307a3b-6543-422d-867e-4ed505c44bb6"
       },
-      "execution_count": 14,
+      "execution_count": 56,
       "outputs": [
         {
           "output_type": "stream",
