melhora a separação das células

--- a/aula-1/conteudo-teorico.ipynb
+++ b/aula-1/conteudo-teorico.ipynb
@@ -318,7 +318,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Listas (Lists)\n",
+        "### Listas (Lists)\n",
         "\n",
         "*   **Característica Principal:** Coleção ordenada, mutável e que permite elementos duplicados. As listas são definidas por colchetes `[]`.\n",
         "*   **Uso:** Ideal para coleções de itens onde a ordem importa e os elementos podem mudar.\n"
@@ -362,7 +362,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Tuplas (Tuples)\n",
+        "### Tuplas (Tuples)\n",
         "\n",
         "*   **Característica Principal:** Coleção ordenada, imutável e que permite elementos duplicados. As tuplas são definidas por parênteses `()`.\n",
         "*   **Uso:** Usada para coleções de itens que não devem ser alterados.\n",
@@ -402,7 +402,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Dicionários (Dictionaries)\n",
+        "### Dicionários (Dictionaries)\n",
         "\n",
         "*   **Característica Principal:** Coleção mutável, que armazena dados em pares de chave-valor. As chaves devem ser únicas e imutáveis. Os dicionários são definidos por chaves `{}`.\n",
         "*   **Uso:** Ideal para representar dados estruturados onde cada valor está associado a uma chave única.\n",
@@ -449,7 +449,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Conjuntos (Sets)\n",
+        "### Conjuntos (Sets)\n",
         "\n",
         "*   **Característica Principal:** Coleção não ordenada, mutável e que **não permite** elementos duplicados. Os conjuntos são definidos por chaves `{}` (assim como dicionários, mas contendo apenas valores, não pares chave-valor) ou pela função `set()`.\n",
         "*   **Uso:** Útil para operações matemáticas de conjunto (união, interseção, diferença) e para remover duplicados de uma coleção.\n",
@@ -706,7 +706,8 @@
   "metadata": {
     "colab": {
       "name": "Welcome To Colab",
-      "provenance": []
+      "provenance": [],
+      "toc_visible": true
     },
     "kernelspec": {
       "display_name": "Python 3",
